<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_greeting_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_greeting_banner"
        android:scaleType="centerCrop"
        android:src="@drawable/img_dummy_2" />

    <TextView
        android:id="@+id/tv_greeting_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/greet"
        android:textColor="@color/whitePure"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_greeting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_greeting_hello"
        android:layout_alignStart="@id/tv_greeting_hello"
        android:text="@string/demo_name"
        android:textColor="@color/whitePure" />

    <TextView
        android:id="@+id/tv_greeting_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:text="@string/explore"
        android:textColor="@color/whitePure"
        android:textStyle="bold" />

</RelativeLayout>